# HomeAssitant-Esp32S3

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/BLE/: BtController.cpp
main/Headers/: Aggregator.h  BtHeader.h  EnvironmentalSensorData.h  Main.h  Settings.h  data_module.h
main/Model/: Aggregator.cpp
main/components/data_module/: data_module.c  data_module.cpp  data_module.h
